kubernetes/apps/mltb/manifests/mltb/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mltb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mltb
  template:
    metadata:
      name: mltb
    spec:
      containers:
        - name: mltb
          image: ghcr.io/kevinnitrog/homelab/mltb:615a34a89f7768ee3b36f1f53889dc537741d7b3
          ports:
            - name: rclone
              containerPort: 8080
            - name: base
              containerPort: 80
            - name: sth
              containerPort: 8090
            - name: sth-i
              containerPort: 8070
          volumeMounts:
            - name: sa-accounts
              mountPath: /usr/src/app/accounts/
              readOnly: true
            - name: sa-token
              mountPath: /usr/src/app/
              readOnly: true
      volumes:
        - name: sa-accounts
          secret:
            secretName: sa-accounts
        - name: sa-token
          secret:
            secretName: sa-token
