kubernetes/apps/mltb/manifests/mltb/service.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/service.json
apiVersion: v1
kind: Service
metadata:
  name: mltb
spec:
  selector:
    app.kubernetes.io/name: mltb
  ports:
    - name: rclone
      port: 8080
    - name: base
      port: 80
    - name: sth
      port: 8090
    - name: sth-i
      port: 8070
